--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://tomgermanyyyy.github.io/my-homepage
 languageCode = "en-us"
 title = "Viet Duc"
 theme = "ananke"
