--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://tomgermanyyyy.github.io/my-homepage"
+baseURL = "/"
 languageCode = "en-us"
 title = "Viet Duc"
 theme = "ananke"
